k8s/node_port_service.yaml
apiVersion: v1
kind: Service
metadata:
   name: feedback-ip-service
spec:
  type: NodePort
  selector:
    component: feedback 
  ports:
     - nodePort: 30163
       port: 80
       targetPort: 80
