k8s/web_cluster-ip_service.yaml
apiVersion: v1
kind: Service
metadata:
   name: feedback-ip-service
spec:
  type: ClusterIP
  selector:
    component: feedback
  ports:
     - port: 80
       targetPort: 80
