k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.+)/
            backend:
              serviceName: feedback-ip-service
              servicePort: 80
